<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="vibrator_sysfs_file">/sys/vibrator/pwmvalue</string>
    <string name="intensity_max_value">127</string>
    <string name="intensity_warning_threshold">96</string>
    <string name="intensity_default_value">64</string>
    <string name="intensity_min_value">0</string>
    <string name="app_name">Advanced settings</string>
    <string name="defaults_button">Reset to default</string>
    <string name="category_screen_title">Screen</string>
    <string name="screen_colors_title">Colors</string>
    <string name="cabc_title_head">CABC</string>
    <string name="cabc_summary_head">Enable content adaptive backlight control</string>
    <string name="panel_gamma_title_head">Screen gamma</string>
    <string name="panel_gamma_summary_head">Set screen gamma value</string>
    <string name="touchscreen_subcat_title">Touchscreen</string>
    <string name="touchscreen_sensitivity_title_head">Touch sensitivity</string>
    <string name="touchscreen_sensitivity_summary_head">Set touch panel sensitivity</string>
    <string name="touchkey_subcat_title">Touchkeys</string>
    <string name="touchkey_led_mode_title">Backlight trigger area</string>
    <string name="touchkey_led_mode_summary">Select the area(s) which, upon touch, will cause the touchkeys to light up</string>
    <string name="touchkey_timeout_title_head">Backlight timeout</string>
    <string name="touchkey_timeout_summary_head">Set timeout for the backlight</string>
    <string name="category_sensors_title">Sensors</string>
    <string name="accelerometer_subcat_title">Accelerometer</string>
    <string name="accelerometer_calibration_title_head">Use calibration data</string>
    <string name="accelerometer_calibration_summary_head">Use the accelerometer calibration values. Do a calibration after checking this!</string>
    <string name="accelerometer_calibrate_title_head">Calibrate</string>
    <string name="accelerometer_calibrate_summary_head">Put your phone on a flat surface, and press this to calibrate</string>
    <string name="accelerometer_dialog_head">Calibration done</string>
    <string name="accelerometer_dialog_message">The sensor has been successfully calibrated.</string>
    <string name="category_haptic_title">Haptic</string>
    <string name="vibrator_title">Vibrator</string>
    <string name="vibrator_tuning_title">Vibration strength</string>
    <string name="vibrator_tuning_summary_head">Adjust the strength of the vibration feedback</string>
    <string name="vibrator_warning">Values higher than %1$d are not recommended</string>
    <string name="category_radio_title">Radio</string>
    <string name="hspa_title_head">HSPA</string>
    <string name="hspa_summary_head">Enable HSDPA/HSUPA</string>
    <string name="category_dock_title">Dock</string>
    <string name="dockaudio_subcat_title">Dock audio</string>
    <string name="use_dock_audio_title_head">Use Dock USB audio</string>
    <string name="use_dock_audio_summary_head">Use the passive audio out on the dock</string>
</resources>
