<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/screen_colors_title">
        <com.cyanogenmod.settings.device.CABC android:title="@string/cabc_title_head" android:key="cabc" android:summary="@string/cabc_summary_head" android:defaultValue="true" />
        <com.cyanogenmod.settings.device.PanelGamma android:entries="@array/panel_gamma_entries" android:title="@string/panel_gamma_title_head" android:key="panel_gamma" android:summary="@string/panel_gamma_summary_head" android:defaultValue="0" android:entryValues="@array/panel_gamma_entries_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/touchscreen_subcat_title">
        <com.cyanogenmod.settings.device.TouchscreenSensitivity android:entries="@array/touchscreen_sensitivity_entries" android:title="@string/touchscreen_sensitivity_title_head" android:key="touchscreen_sensitivity" android:summary="@string/touchscreen_sensitivity_summary_head" android:defaultValue="40" android:entryValues="@array/touchscreen_sensitivity_entries_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/touchkey_subcat_title">
        <ListPreference android:entries="@array/touchkey_led_mode_entries" android:title="@string/touchkey_led_mode_title" android:key="touchkey_led_mode" android:summary="@string/touchkey_led_mode_summary" android:defaultValue="1" android:entryValues="@array/touchkey_led_mode_entries_values" />
        <com.cyanogenmod.settings.device.TouchkeyTimeout android:entries="@array/touchkey_timeout_entries" android:title="@string/touchkey_timeout_title_head" android:key="touchkey_timeout" android:summary="@string/touchkey_timeout_summary_head" android:defaultValue="3" android:entryValues="@array/touchkey_timeout_entries_values" />
    </PreferenceCategory>
</PreferenceScreen>